# awesometd

./: .gitignore  AUTHORS  README  TODO  configure.ac
doc/: include-graph.dot  local-include-graph.dot
src/: audio.c  audio.h  filepath.c  filepath.h  game.c  game.h  input.c  input.h  main.c  menu.c  menu.h  parser.c  pathfind.c  video.c  video.h
tools/: check-code.sh  gen-include-graph.sh  gen-local-include-graph.sh
